feat: release ContentCloud v0.3.0
